--- a/app/static/style/aboutus.css
+++ b/app/static/style/aboutus.css
@@ -7,7 +7,7 @@
 }
 
 .mission-text, .goal-text {
-    color: #0080b3; 
+    color: #05a0dd; 
 }
 
 .email-button-container {
@@ -23,7 +23,7 @@
 }
 
 .email-button {
-    background-color:  #0080b3;
+    background-color: #029dda;
     color: white;
     border: none;
     padding: 10px 20px;
