--- a/app/templates/survey/create_survey.html
+++ b/app/templates/survey/create_survey.html
@@ -10,7 +10,7 @@
     <!-- Content container with top margin -->
     <div class="card">
         <div class="card-body">
-            <h2>Create a New Survey</h2>
+            <h2 class="text-center">Create a New Survey</h2>
             <form method="POST" action="{{ url_for('main.create_survey') }}" id="survey-form">
                 <!-- Form to create a new survey -->
                 {{ form.hidden_tag() }}
