--- a/app/templates/survey/my_surveys.html
+++ b/app/templates/survey/my_surveys.html
@@ -10,7 +10,7 @@
     <!-- Container for the survey list and the new survey button -->
     <div class="container mt-3">
         <div class="d-flex justify-content-end mb-3">
-            <a class="btn btn-primary btn-" href="{{ url_for('main.create_survey') }}">+ New Survey</a>
+            <a class="btn btn-primary" href="{{ url_for('main.create_survey') }}" >+ New Survey</a>
         </div>
         <!-- List group for displaying surveys -->
         <div class="list-group" id="surveyList">
