--- a/app/templates/survey/update_profile.html
+++ b/app/templates/survey/update_profile.html
@@ -32,7 +32,7 @@
                     <label for="points" class="form-label"><strong>Points</strong></label>
                     <input type="text" class="form-control readonly-input" id="points" placeholder="{{ current_user.point }}" readonly>
                     <!-- Submit button for the form -->
-                    {{ form.submit(class="btn btn-primary mt-3") }}
+                    {{ form.submit(class="btn btn-primary ") }}
             </div>
         </form>
     </div>
