--- a/app/templates/user/change_password.html
+++ b/app/templates/user/change_password.html
@@ -42,7 +42,7 @@
 
             <!-- Submit button for the form -->
             <div class="mb-3">
-                {{ form.submit(class="btn btn-primary btn-lg btn-block") }}
+                {{ form.submit(class="btn btn-primary btn-block") }}
             </div>
         </form>
     </div>
