Revert "Merge branch 'main' of https://github.com/CITS5505GroupProject/CITS5505-Group-Project into chinmai"
This reverts commit 475f002f0987124e90cbb129fb9847e80f68c104, reversing
changes made to 5b32953f2b1f150cb7b71056cde7149caf6eb568.

--- a/app/static/style/sidebar.css
+++ b/app/static/style/sidebar.css
@@ -99,12 +99,7 @@ a.sidebar-link {
 }
 
 a.sidebar-link:hover {
-    background: linear-gradient(135deg,#8c8ff1 0%, #4783c7 100%);
-    border-left: 3px solid #1f1f1f;
-}
-
-a.sidebar-link:active {
-    background: linear-gradient(135deg,#8c8ff1 0%, #4783c7 100%);
+    background-color: rgba(255, 255, 255, .075);
     border-left: 3px solid #1f1f1f;
 }
 
