--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -1,5 +1,4 @@
 {% extends 'user/base_user.html' %}
-{% block title %} Sign Up {% endblock %}
 {% block content %}
 <div class="card shadow-lg" style="border-radius: 1rem;">
     <div class="card-body p-5 text-center">
@@ -7,8 +6,6 @@
         <h3 class="mb-5">Sign Up</h3>
         <form method="POST" action="">
             {{ form.hidden_tag() }}
-
-            <!-- Username field -->
             <div class="mb-3">
                 {{ form.username.label(class="form-label") }}
                 {{ form.username(class="form-control") }}
@@ -18,8 +15,6 @@
                     </div>
                 {% endif %}
             </div>
-
-            <!-- Email field -->
             <div class="mb-3">
                 {{ form.email.label(class="form-label") }}
                 {{ form.email(class="form-control") }}
@@ -29,8 +24,6 @@
                     </div>
                 {% endif %}
             </div>
-
-            <!-- Password field -->
             <div class="mb-3">
                 {{ form.password.label(class="form-label") }}
                 {{ form.password(class="form-control") }}
@@ -40,8 +33,6 @@
                     </div>
                 {% endif %}
             </div>
-
-            <!-- Confirm Password field -->
             <div class="mb-3">
                 {{ form.confirm_password.label(class="form-label") }}
                 {{ form.confirm_password(class="form-control") }}
@@ -51,8 +42,6 @@
                     </div>
                 {% endif %}
             </div>
-
-            <!-- Flash messages for general feedback  -->
             <div class="mb-3">
                 {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
@@ -65,15 +54,11 @@
                 {% endif %}
                 {% endwith %}
             </div>
-
-            <!-- Submit button -->
             <div class="mb-3">
                 {{ form.submit(class="btn btn-primary btn-lg btn-block") }}
             </div>
-
-            <!-- Link to login page for existing users -->
             <div class="mb-3">
-                <a href="{{ url_for('main.login') }}">Already have a account?</a>
+                <a href="{{ url_for('login') }}">Already have a account?</a>
             </div>
         </form>
     </div>
