--- a/app/templates/navbar/navbar.html
+++ b/app/templates/navbar/navbar.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     {% block extra_css %}{% endblock %}
     <style>
-        /* style for mobile view */
         @media (max-width: 992px){
             .navbar {
                 background-color: rgba(255, 255, 255, 0.9);
@@ -21,61 +20,49 @@
     </style>
 </head>
 <header>
-    <!-- navbar section -->
     <nav class="navbar navbar-expand-lg navbar-light {% if visible %} bg-light {% endif %} fixed-top">
         <div class="container-fluid">
-            <!-- Brand and logo -->
-            <a class="navbar-brand" href="index"><img src="../../static/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top me-2">
-                Survey Stream
-            </a>
-            <!-- Toggler for mobile view -->
+            <a class="navbar-brand" href="index"><img src="../../static/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top me-2">Survey Stream</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#niceNav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="niceNav">
-                <!-- Navbar links -->
                 <ul class="navbar-nav justify-content-center me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.index')}}">Home</a>
+                        <a class="nav-link" href="{{ url_for('index')}}">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('main.survey_dashboard') }}">Surveys</a>
+                      <a class="nav-link" href="{{ url_for('survey_dashboard') }}">Surveys</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.create_survey') }}">Create Survey</a>
+                        <a class="nav-link" href="{{ url_for('create_survey') }}">Create Survey</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.leaderboard') }}">Leaderboard</a>
+                        <a class="nav-link" href="{{ url_for('leaderboard') }}">Leaderboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.about_us') }}">About us</a>
+                        <a class="nav-link" href="{{ url_for('about_us') }}">About us</a>
                     </li>
                 </ul>
-                <!-- User authentication links -->
+
                 {% if current_user.is_authenticated %}
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item dropdown">
-                            <a class="btn btn-outline-primary dropdown-toggle me-lg-2 mb-2 mb-lg-0 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" >
-                                Hello, {{ current_user.username }}
-                            </a>
+                            <a class="btn btn-outline-success dropdown-toggle me-lg-2 mb-2 mb-lg-0 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" >Hello, {{ current_user.username }}</a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="{{ url_for('main.my_survey', user_id = current_user.id) }}">My Surveys</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('main.update_profile', user_id = current_user.id) }}">My Account</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('main.logout') }}">Log Out</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('my_survey', user_id = current_user.id) }}">My Surveys</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('update_profile', user_id = current_user.id) }}">My Account</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a></li>
                             </ul>
                         </li>
                     </ul>
                 {% else %}
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="btn btn-outline-primary me-lg-2 mb-2 mb-lg-0 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="login">
-                                Log In
-                            </a>
+                            <a class="btn btn-outline-primary me-lg-2 mb-2 mb-lg-0 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="login">Log In</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-outline-primary ms-lg-2 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="register">
-                                Sign Up
-                            </a>
+                            <a class="btn btn-outline-primary ms-lg-2 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="register">Sign Up</a>
                         </li>
                     </ul>
                 {% endif %}
@@ -86,7 +73,6 @@
 
 
 <body style="padding-top: 56px;">
-    <!-- Main content section -->
     {% block content %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     {% block extra_js %}{% endblock %}
