--- a/app/templates/user/change_password.html
+++ b/app/templates/user/change_password.html
@@ -1,13 +1,10 @@
 {% extends 'navbar/navSidebar.html' %}
-{% block title %} Change Password {% endblock %}
 {% block content %}
 <div class="card shadow-2-strong" style="border-radius: 1rem;">
     <div class="card-body p-5 text-center">
         <h3 class="mb-5">Change Password</h3>
         <form method="POST" action="">
             {{ form.hidden_tag() }}
-
-            <!-- Current password input field -->
             <div class="mb-3">
                 {{ form.current_password.label(class="form-label") }}
                 {{ form.current_password(class="form-control") }}
@@ -17,8 +14,6 @@
                     </div>
                 {% endif %}
             </div>
-
-            <!-- New password input field -->
             <div class="mb-3">
                 {{ form.new_password.label(class="form-label") }}
                 {{ form.new_password(class="form-control") }}
@@ -28,8 +23,6 @@
                     </div>
                 {% endif %}
             </div>
-
-            <!-- Confirm new password input field -->
             <div class="mb-3">
                 {{ form.confirm_new_password.label(class="form-label") }}
                 {{ form.confirm_new_password(class="form-control") }}
@@ -39,10 +32,20 @@
                     </div>
                 {% endif %}
             </div>
-
-            <!-- Submit button for the form -->
             <div class="mb-3">
-                {{ form.submit(class="btn btn-primary btn-block") }}
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endfor %}
+                {% endif %}
+                {% endwith %}
+            </div>
+            <div class="mb-3">
+                {{ form.submit(class="btn btn-primary btn-lg btn-block") }}
             </div>
         </form>
     </div>
